<resources>
    <string name="app_name">Toronto Tourism</string>

    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_me_text">Remember Me?</string>
    <string name="login_text">Login</string>
    <string name="attraction_details_text">Attraction Details</string>
    <string name="logout_text">Logout</string>
    <string name="back_text">Go Back</string>
    <string name="per_ticket_text">(per ticket)</string>

    <string name="preference_file_key">com.project.tourismapp.config</string>
    <string name="remember_me_key">remember_me_key</string>
    <string name="email_key">email_key</string>
    <string name="password_key">password_key</string>
    <string name="email_empty_error">Email can\'t be blank!</string>
    <string name="email_invalid_error">Invalid email format!</string>
    <string name="password_empty_error">Password can\'t be blank!</string>
    <string name="invalid_user_error">User not found!</string>

    <string name="welcome_msg">Welcome</string>
    <string name="session_intent_extra">session</string>
    <string name="attraction_intent_extra">attraction</string>

    <string name="users_json_filename">users.json</string>
    <string name="users_json_key">users</string>
    <string name="username_json_key">username</string>
    <string name="password_json_key">password</string>
    <string name="user_ratings_json_key">userRatings</string>
    <string name="rating_json_key">rating</string>
    <string name="attraction_id_json_key">attractionId</string>
    <string name="attractions_json_key">attractions</string>

    <string name="attraction_id_key">id</string>
    <string name="attraction_name_key">name</string>
    <string name="attraction_description_key">description</string>
    <string name="attraction_address_key">address</string>
    <string name="attraction_price_key">price</string>
    <string name="attraction_icon_key">icon</string>
    <string name="attraction_photos_key">photos</string>
    <string name="attraction_phone_key">phone</string>
    <string name="attraction_website_key">website</string>

    <string name="phone_uri">tel://</string>
    <string name="map_uri">http://maps.google.co.in/maps?q=</string>
</resources>